--- a/style.css
+++ b/style.css
@@ -107,10 +107,15 @@ header nav ul li:hover::after{
     justify-content: center;
     align-items: center;
     opacity: 0;
+
+    /*animation*/
+    transform: translateX(100vw);
+    transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .active {
     opacity: 1;
+    transform: translateX(0);
 }
 
 .product-img {
@@ -126,7 +131,18 @@ header nav ul li:hover::after{
 .product-img img{
     max-width: 80%;
     max-height: 60%;
-    filter:drop-shadow(0 0 30px rgba(0, 247, 255, 0.3))
+    filter:drop-shadow(0 0 30px rgba(0, 247, 255, 0.3));
+
+        /* animation */
+    transform: translateX(200px);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
+}
+
+.active .product-img img{
+    transform: translateX(0);
+    opacity: 1;
 }
 
 .content {
@@ -146,14 +162,38 @@ header nav ul li:hover::after{
     font-weight: 600;
     letter-spacing: 2px;
     margin-bottom: 10px;
+
+            /* animation */
+    transform: translateX(200px);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.4s;
 }
+
+.active .product-tag{
+    transform: translateX(0);
+    opacity: 1;
+}
+
 
 .product-name {
     font-size: 4.5rem;
     font-family: "Orbitron", sans-serif;
     line-height: 1.1;
     margin-bottom: 20px;
+
+            /* animation */
+    transform: translateX(200px);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.5s;
 }
+
+.active .product-name{
+    transform: translateX(0);
+    opacity: 1;
+}
+
 
 .description {
     font-size: 1rem;
@@ -161,7 +201,19 @@ header nav ul li:hover::after{
     line-height: 1.6;
     margin-bottom: 30px;
     max-width: 600px;
-} 
+
+            /* animation */
+    transform: translateX(200px);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.6s;
+}
+
+.active .description{
+    transform: translateX(0);
+    opacity: 1;
+}
+
 
 .btn {
     padding: 12px 10px;
@@ -172,7 +224,19 @@ header nav ul li:hover::after{
     font-weight: 600;
     cursor: pointer;
     border: none;
+
+            /* animation */
+    transform: translateX(200px);
+    opacity: 0;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+    transition-delay: 0.7s;
 }
+
+.active .btn{
+    transform: translateX(0);
+    opacity: 1;
+}
+
 
 .btn:hover {
     background-color: #1f1f3a;
