--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header {
     z-index: 3;
 }
 
-.logo{
+.logo {
     font-family: "Orbitron", sans-serif;
     font-size: 2rem;
     font-weight: 900;
@@ -43,18 +43,18 @@ header nav ul li {
     padding: 5px 0;
 }
 
-header nav ul li::after{ 
+header nav ul li::after {
     content: '';
     position: absolute;
     left: 0;
     bottom: 0;
     width: 0;
     height: 2px;
-    background-color: #00f7ff ;
+    background-color: #00f7ff;
     transition: width 0.5s ease;
 }
 
-header nav ul li:hover::after{
+header nav ul li:hover::after {
     width: 100%;
 
 }
@@ -86,11 +86,12 @@ header nav ul li:hover::after{
         opacity: 0.5;
         transform: translate(-50%, -50%) scale(0.8);
     }
+
     100% {
         opacity: 1;
         transform: translate(-50%, -50%) scale(1.5);
     }
-    
+
 }
 
 .list {
@@ -98,9 +99,9 @@ header nav ul li:hover::after{
     height: 100%;
     margin: 0 auto;
     position: relative;
-} 
+}
 
-.item{
+.item {
     position: absolute;
     inset: 0;
     display: flex;
@@ -128,19 +129,19 @@ header nav ul li:hover::after{
     z-index: 2;
 }
 
-.product-img img{
-    max-width: 80%;
-    max-height: 60%;
-    filter:drop-shadow(0 0 30px rgba(0, 247, 255, 0.3));
+.product-img img {
+    max-width: 70%;
+    height: auto;
+    filter: drop-shadow(0 0 30px rgba(0, 247, 255, 0.3));
 
-        /* animation */
+    /* animation */
     transform: translateX(200px);
     opacity: 0;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transition-delay: 0.5s;
 }
 
-.active .product-img img{
+.active .product-img img {
     transform: translateX(0);
     opacity: 1;
 }
@@ -163,14 +164,14 @@ header nav ul li:hover::after{
     letter-spacing: 2px;
     margin-bottom: 10px;
 
-            /* animation */
+    /* animation */
     transform: translateX(200px);
     opacity: 0;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transition-delay: 0.4s;
 }
 
-.active .product-tag{
+.active .product-tag {
     transform: translateX(0);
     opacity: 1;
 }
@@ -182,14 +183,14 @@ header nav ul li:hover::after{
     line-height: 1.1;
     margin-bottom: 20px;
 
-            /* animation */
+    /* animation */
     transform: translateX(200px);
     opacity: 0;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transition-delay: 0.5s;
 }
 
-.active .product-name{
+.active .product-name {
     transform: translateX(0);
     opacity: 1;
 }
@@ -202,14 +203,14 @@ header nav ul li:hover::after{
     margin-bottom: 30px;
     max-width: 600px;
 
-            /* animation */
+    /* animation */
     transform: translateX(200px);
     opacity: 0;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transition-delay: 0.6s;
 }
 
-.active .description{
+.active .description {
     transform: translateX(0);
     opacity: 1;
 }
@@ -225,14 +226,14 @@ header nav ul li:hover::after{
     cursor: pointer;
     border: none;
 
-            /* animation */
+    /* animation */
     transform: translateX(200px);
     opacity: 0;
     transition: transform 0.6s ease, opacity 0.6s ease;
     transition-delay: 0.7s;
 }
 
-.active .btn{
+.active .btn {
     transform: translateX(0);
     opacity: 1;
 }
@@ -250,10 +251,10 @@ header nav ul li:hover::after{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 5; 
+    z-index: 5;
 }
 
-.arrow-btn{
+.arrow-btn {
     width: 40px;
     height: 50px;
     border-radius: 50%;
@@ -262,25 +263,25 @@ header nav ul li:hover::after{
     border: 1px solid rgba(0, 247, 255, 0.3);
 }
 
-.arrow-btn:hover{
+.arrow-btn:hover {
     background-color: rgba(0, 247, 255, 0.2);
     border-color: #00f7ff;
 }
 
 .indicators {
-   position: absolute; 
-   bottom: 40px;
-   left: 50%;
-   transform: translateX(-50%);
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   gap: 15px;
-   z-index: 5;
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    z-index: 5;
 }
 
 .numbers {
-    font-family: "Orbitron", sans-serif ;
+    font-family: "Orbitron", sans-serif;
     font-size: 3rem;
     font-weight: 800;
     color: rgba(255, 255, 255, 0.2);
@@ -291,54 +292,61 @@ header nav ul li:hover::after{
     gap: 10px;
 }
 
-.dot{
+.dot {
     width: 40px;
     height: 4px;
-    background-color:rgba(255, 255, 255, 0.2) ;
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 2px;
 }
 
-.dot.active{
+.dot.active {
     background-color: #00f7ff;
     box-shadow: 0 0 10px rgba(0, 247, 255, 0.5);
 }
 
-.tech-circle{
+.tech-circle {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden ;
+    pointer-events: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .circle {
     position: absolute;
     border-radius: 50%;
-    border: 1px solid rgba(0, 247, 255, 0.2);
+    border: 2px solid rgba(0, 247, 255, 0.2);
+    /*Responsivo*/
+    width: clamp(100px, 20vw, 300px);
+    height: clamp(100px, 20vw, 300px);
 }
 
-.circle:nth-child(1){
-    width: 200px;
-    height: 200px;
+.circle:nth-child(1) {
+    width: clamp(100px, 20vw, 200px);
+    height: clamp(100px, 20vw, 200px);
     top: 10%;
     left: 10%;
 }
-.circle:nth-child(2){
-    width: 300px;
-    height: 300px;
+
+.circle:nth-child(2) {
+    width: clamp(150px, 30vw, 300px);
+    height: clamp(150px, 30vw, 300px);
     top: 60%;
     left: 80%;
 }
-.circle:nth-child(3){
-    width: 150px;
-    height: 150px;
+
+.circle:nth-child(3) {
+    width: clamp(75px, 10vw, 150px);
+    height: clamp(75px, 10vw, 150px);
     top: 70%;
     left: 20%;
 }
-.circle:nth-child(4){
-    width: 120px;
-    height: 120px;
+
+.circle:nth-child(4) {
+    width: clamp(60px, 7vw, 120px);
+    height: clamp(60px, 7vw, 120px);
     top: 20%;
     left: 70%;
 }
@@ -349,33 +357,34 @@ header nav ul li:hover::after{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background:radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%) ;
+    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%);
     transform: translate(-10%, -10%);
     filter: blur(50px);
     z-index: 1;
-    animation: circle1 5s infinite alternate;  
+    animation: circle1 5s infinite alternate;
 }
 
-@keyframes circle1{
-    0%{
+@keyframes circle1 {
+    0% {
         opacity: 0.5;
         transform: translate(-10%, -10%)scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: translate(-10%, -10%)scale(1);
-    }    
+    }
 }
 
 .circle:nth-child(2)::before {
-    content:'';
+    content: '';
     position: absolute;
     width: 300px;
     height: 300px;
     top: 60%;
     left: 80%;
     border-radius: 50%;
-    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%) ;
+    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%);
     transform: translate(-60%, -80%);
     filter: blur(50px);
     z-index: 1;
@@ -383,24 +392,25 @@ header nav ul li:hover::after{
 }
 
 @keyframes circle2 {
-    0%{
+    0% {
         opacity: 0.5;
         transform: translate(-80%, -60%)scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: translate(-80%, -60%)scale(1);
     }
 }
 
-.circle:nth-child(3)::after{
+.circle:nth-child(3)::after {
     content: '';
     position: absolute;
     width: 150px;
     height: 150px;
     top: 70%;
     left: 20%;
-    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%) ;
+    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%);
     transform: translate(-60%, -80%);
     filter: blur(50px);
     z-index: 1;
@@ -408,25 +418,26 @@ header nav ul li:hover::after{
 }
 
 @keyframes circle3 {
-       0%{
+    0% {
         opacity: 0.5;
         transform: translate(-20%, -70%)scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: translate(-20%, -70%)scale(1);
     }
-    
+
 }
 
-.circle:nth-child(4)::after{
+.circle:nth-child(4)::after {
     content: '';
     position: absolute;
     width: 120px;
     height: 120px;
     top: 20%;
     left: 70%;
-    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%) ;
+    background: radial-gradient(circle, rgba(0, 72, 75, 0.9) 0%, rgba(0, 102, 75, 0.9) 100%);
     transform: translate(-60%, -80%);
     filter: blur(50px);
     z-index: 1;
@@ -434,13 +445,58 @@ header nav ul li:hover::after{
 }
 
 @keyframes circle4 {
-       0%{
+    0% {
         opacity: 0.5;
         transform: translate(-70%, -20%)scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: translate(-70%, -20%)scale(1);
     }
-    
+
+}
+
+@media (max-width: 768px) {
+    .item {
+        flex-direction: column;
+        /*imagem em cima, texto embaixo*/
+        text-align: center;
+        padding: 20px;
+    }
+
+    .product-img {
+        width: 100%;
+    }
+
+    .content {
+        width: 100%;
+        padding: 0;
+        align-items: center;
+    }
+
+    .product-name {
+        font-size: 2rem;
+        /*menor*/
+    }
+
+    .description {
+        font-size: 0.9rem;
+        max-width: 90%;
+    }
+
+    @media (max-width: 600px) {
+        .arrow-btn {
+            width: 30px;
+            height: 40px;
+        }
+
+        .numbers {
+            font-size: 2rem;
+        }
+
+        .dot {
+            width: 20px;
+        }
+    }
 }
